changing to cursorloader